move to hjson (not working)